# RTS-apply

./: 2025机器人队报名表.docx  Task1.doc
Task4&5/: CMakeLists.txt  Task4&5解释文档.md  main.cpp
Task6/: Explain（Task6）
Task6/publisher_pkg/: CMakeLists.txt  package.xml
Task6/publisher_pkg/launch/: launch.xml
Task6/publisher_pkg/src/: publisher_node.cpp
Task6/subscriber_pkg/: CMakeLists.txt  package.xml
Task6/subscriber_pkg/src/: subscriber_node.cpp
Task7/: 解释文档.odt
Task8/aruco_screen_autolayout/: CMakeLists.txt  aruco_screen_autolayout.launch  package.xml
Task8/aruco_screen_autolayout/scripts/: aruco_screen_node_autolayout.py
