<package format="2">
  <name>publisher_pkg</name>
  <version>1.0.0</version>
  <description>Publisher package with custom message</description>
  
  <maintainer email="3250172180@qq.com">sxz</maintainer>
   <license>MIT</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
