<?xml version="1.0"?>
<package format="2">
  <name>aruco_screen_pkg</name>
  <version>0.1.1</version>
  <description>Detect ArUco on a screen and auto-reconstruct a 2x4 grid in visual order (auto layout), from rosbag or live topics.</description>

  <maintainer email="jcegkxw30opx@outlook.com">Christopher Herrera</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>

  <!-- 新增：节点支持从 rosbag 直接读取帧 -->
  <exec_depend>rosbag</exec_depend>

  <!-- OpenCV(Python) 运行时 -->
  <exec_depend>python3-opencv</exec_depend>
</package>

